hphp/hack/test/typecheck/very_long_lines.php.exp
File "very_long_lines.php", line 5, characters 594-594:
A left parenthesis ('(') is expected here. (Parsing[1002])
